k8s/frontend-deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend
  namespace: micro-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: dev7878/micro-svc-frontend:1.0.0
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "120m"
              memory: "250Mi"
            limits:
              cpu: "240m"
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
