k8s/mongo-db-deploy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: micro-svc
spec:
  serviceName: mongo
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:4.4
        ports:
        - containerPort: 27017 
        volumeMounts:
        - name: mongo
          mountPath: /data/db

  volumeClaimTemplates:
  - metadata:
      name: mongo
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: mongo-sc   
      resources:
        requests:
          storage: 1Gi
