k8s/order-svc-deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: order-svc
  namespace: micro-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-svc
  template:
    metadata:
      labels:
        app: order-svc
    spec:
      containers:
        - name: order-svc
          image: dev7878/backend-order-svc:1.0.0
          ports:
            - containerPort: 3003
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /orders
              port: 3003
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /orders
              port: 3003
            initialDelaySeconds: 5
            periodSeconds: 10
