k8s/product-svc-deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: product-svc
  namespace: micro-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-svc
  template:
    metadata:
      labels:
        app: product-svc
    spec:
      containers:
        - name: product-svc
          image: dev7878/backend-product-svc:1.0.0
          ports:
            - containerPort: 3002
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /products
              port: 3002
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /products
              port: 3002
            initialDelaySeconds: 5
            periodSeconds: 10
