k8s/user-svc-deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: user-svc
  namespace: micro-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-svc
  template:
    metadata:
      labels:
        app: user-svc
    spec:
      containers:
        - name: user-svc
          image: dev7878/backend-user-svc:1.0.0
          ports:
            - containerPort: 3001
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /users
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /users
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 10
