k8s/frontend-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend-svc
  namespace: micro-svc
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
