k8s/product-svc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-svc
  namespace: micro-svc
spec:
  type: ClusterIP
  selector:
    app: product-svc
  ports:
  - port: 3002 
    targetPort: 3002
