k8s/user-svc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-svc
  namespace: micro-svc
spec:
  type: ClusterIP
  selector:
    app: user-svc
  ports:
  - port: 3001 
    targetPort: 3001
